[package]
name = "rainbow"
version = "0.1.0"
authors = ["Evelyn-H <hobert.evelyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.7"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }

[build-dependencies]
shaderc = "0.7"
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"
rayon = "1.4"

[[bin]]
name = "rainbow"
path = "src/main.rs"
